@@ -14,8 +14,6 @@ type kafkaConfig struct {
 	TLS             *outputs.TLSConfig `config:"tls"`
 	Timeout         time.Duration      `config:"timeout"             validate:"min=1"`
 	Worker          int                `config:"worker"              validate:"min=1"`
-	UseType         bool               `config:"use_type"`
-	Topic           string             `config:"topic"`
 	KeepAlive       time.Duration      `config:"keep_alive"          validate:"min=0"`
 	MaxMessageBytes *int               `config:"max_message_bytes"   validate:"min=1"`
 	RequiredACKs    *int               `config:"required_acks"       validate:"min=-1"`
@@ -32,8 +30,6 @@ var (
 		TLS:             nil,
 		Timeout:         30 * time.Second,
 		Worker:          1,
-		UseType:         false,
-		Topic:           "",
 		KeepAlive:       0,
 		MaxMessageBytes: nil, // use library default
 		RequiredACKs:    nil, // use library default
@@ -48,10 +44,6 @@ var (
 func (c *kafkaConfig) Validate() error {
 	if len(c.Hosts) == 0 {
 		return errors.New("no hosts configured")
-	}
-
-	if c.UseType == false && c.Topic == "" {
-		return errors.New("use_type must be true or topic must be set")
 	}
 
 	if _, ok := compressionModes[strings.ToLower(c.Compression)]; !ok {
